# KoboAnnotationExport

./: .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  Taskfile.yml  backup.txt  build.sh  index.html  kae.html  kae.js  main.cpp  mkdocs.yml  vcpkg.json  vcpkg.sh  wasmbuild.sh  winbuild.ps1
.github/workflows/: docs.yml  main.yml
darwin/: Taskfile.yml  kae.icns
docs/: getting-started.md  index.md
getting-started/: index.html
linux/: AppRun  Taskfile.yml  apt-deps.txt  docker-build.sh  kae.desktop  kaet.desktop
search/: search_index.json
src/BookModel/: BookListView.qml  BookModelDelegate.qml  CMakeLists.txt  bookModel.cpp  bookModel.h  proxyModel.cpp  proxyModel.h
src/BookModel/headers/: bookModel.h  proxyModel.h
src/BookModel/qml/: BookListView.qml  BookModelDelegate.qml  BookSectionDelegate.qml  NotesPopup.qml  RoundHoverButton.qml
src/BookModel/src/: bookModel.cpp  proxyModel.cpp
src/DoubleList/: CMakeLists.txt  innerList.cpp  innerList.h  outerList.cpp  outerList.h
src/KaeLib/: CMakeLists.txt  kaeLib.cpp  kaeLib.h
src/KoboLib/: CMakeLists.txt
src/KoboLib/headers/: koboDB.h
src/KoboLib/src/: koboDB.cpp
src/KoboLib/tests/: koboDB_test.cpp
src/TreeModel/: CMakeLists.txt  derivedExample.cpp  derivedExample.h  treeItem.cpp  treeItem.h  treeModel.cpp  treeModel.h
src/qml/: First.qml  InternetCode.qml  KaeDarkPalette.qml  KaePalette.qml  Main.qml  Second.qml  Third.qml  Toast.qml  ToastManager.qml  TreeTest.qml
windows/: Taskfile.yml  kae.rc
